Fixed personUrls so that it works with the new fields added to the top

--- a/Web.UI/Views/Research/PersonUrls.cshtml
+++ b/Web.UI/Views/Research/PersonUrls.cshtml
@@ -8,9 +8,9 @@
     <form class="form-horizontal " role="form">
         <div class="form-group">
             <div class="row">
-                <label for="personUrlOptionsYearRange" class="col-sm-2 control-label">Year Range:</label>
+                <label for="personUrlsYearRange" class="col-sm-2 control-label">Year Range:</label>
                 <div class="col-sm-2 options-dropdown">
-                    <select class="form-control select2Digit" id="personUrlOptionsYearRange">
+                    <select class="form-control select2Digit" id="personUrlsYearRange">
                         <option>0</option>
                         <option>1</option>
                         <option selected>2</option>
@@ -21,9 +21,9 @@
 
                 <div class="col-sm-7">
                     <div class="checkbox">
-                        <label><input type="checkbox" id="personUrlOptionsMaidenName" name="optradio">Maiden Name</label>&nbsp;&nbsp;
-                        <label><input type="checkbox" id="personUrlOptionsMiddleName" name="optradio">Middle Name</label>&nbsp;&nbsp;
-                        <label><input type="checkbox" id="personUrlOptionsMiddleName" name="optradio">Place</label>
+                        <label><input type="checkbox" id="personUrlsMaidenName" name="optradio">Maiden Name</label>&nbsp;&nbsp;
+                        <label><input type="checkbox" id="personUrlsMiddleName" name="optradio">Middle Name</label>&nbsp;&nbsp;
+                        <label><input type="checkbox" id="personUrlsPlace" name="optradio">Place</label>
                     </div>
                 </div>
             </div>
