Fix index Start Now Button

--- a/Web.UI/Views/Home/Index.cshtml
+++ b/Web.UI/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                  data-ls="offsetxin:0;offsetyin:top;delayin:500;easingin:easeOutQuint;fadein:false;rotatein:-90;offsetxout:0;offsetyout:top;durationout:750;fadeout:false;rotateout:-90;">Family Names</h5>
             <h5 class="ls-l " style="top: 375px; left: 29.5%; font-size: 24px; position: absolute;"
                  data-ls="offsetxin:-50;durationin:2000;delayin:1000;offsetxout:-50;durationout:1000;">
-                <a class="btn btn-success btn-slider" href="@Url.Action("Research", "Home")"><i class="fa color-light fa-wrench"></i><span style="color: floralwhite;">  Start Now</span></a>
+                <a class="btn btn-success btn-slider" style="border-bottom-left-radius: 4px; border-top-left-radius: 4px;" href="@Url.Action("Research", "Home")"><i class="fa color-light fa-wrench"></i><span style="color: floralwhite;">  Start Now</span></a>
             </h5>
 
         </div>
