--- a/Web.UI/Views/Home/Index.cshtml
+++ b/Web.UI/Views/Home/Index.cshtml
@@ -89,7 +89,7 @@
         <div class="col-md-3 ftr-col-layout">
             <div class="features-layout">
                 <a id="feature4" href="#" class="ftr-a feature-4 ">
-                    <h4 class="ftr-h5">Incomplete Ordinances.</h4> <h5 class="ftr-h5">Find available ordinances.</h5>
+                    <h4 class="ftr-h5">Ordinances.</h4> <h5 class="ftr-h5">Find available ordinances.</h5>
                 </a>
             </div>
         </div>
