--- a/Web.UI/Views/Research/Research.cshtml
+++ b/Web.UI/Views/Research/Research.cshtml
@@ -59,9 +59,9 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="promo-box">
-                        <a id="incompleteOrdinances" href="#">
+                        <a id="ordinances" href="#">
                             <span class="fa fmf-temple64"></span>
-                            <strong>Incomplete Ordinances</strong>
+                            <strong>Ordinances</strong>
                         </a>
                         <p>This utility finds available ordinances that can be requested, along with other useful information to help with researching family names</p>
                     </div>
