--- a/Web.UI/Views/Research/StartingPointReport.cshtml
+++ b/Web.UI/Views/Research/StartingPointReport.cshtml
@@ -41,8 +41,8 @@
 </div>
 <div id="startingPointReportSpinner" />
 
-<div id="startingPointPersonInfoDiv" class="personInfo">
-    <div id="content"></div>
+<div id="startingPointReportPersonInfoDiv" class="personInfo">
+    <div id="startingPointReportPersonInfoContent"></div>
 </div>
 
 <script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
