--- a/Web.UI/Views/Research/StartingPoint.cshtml
+++ b/Web.UI/Views/Research/StartingPoint.cshtml
@@ -4,7 +4,7 @@
             <label for="startingPointReportId" class="col-sm-2 control-label">Retrieved:</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <select class="form-control personAction1" id="startingPointReportId">
+                    <select class="form-control startingPointAction" id="startingPointReportId">
                         <option value="0">Select</option>
                     </select>
                     <span class="input-group-btn">
@@ -26,7 +26,7 @@
             <label for="startingPointPersonId" class="col-sm-2 control-label">Name:</label>
             <div class="col-sm-6">
                 <div class="input-group">
-                    <select class="form-control  personAction1" id="startingPointPersonId"></select>
+                    <select class="form-control  startingPointAction" id="startingPointPersonId"></select>
                     <span class="input-group-btn">
                             <button id="startingPointFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
                         </span>
@@ -42,22 +42,23 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label" id ="optionLabel">Options:</label>
+            <label class="col-sm-2 control-label" id ="optionLabel">Required:</label>
             <div class="col-sm-10" style="margin-top: 10px;">
                 <div class="input-group">
-                    <input id="startingPointNonMormon" type="checkbox" /><label for="startingPointNonMormon">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Non-Mormon</span></label>&nbsp;&nbsp;
                     <input id="startingPointBorn18101850" type="checkbox" /><label for="startingPointBorn18101850">&nbsp;<span style="font-weight: normal">Born 1810-1850</span></label>&nbsp;&nbsp;
                     <input id="startingPointLivedInUSA" type="checkbox" /><label for="startingPointLivedInUSA">&nbsp;<span style="font-weight: normal">Lived in USA</span></label>&nbsp;&nbsp;
                 </div>
             </div>
         </div>
         <div class="form-group checkbox-bottom">
-            <label for="startingPointIncompleteOrdinances" class="col-sm-2 control-label">&nbsp;</label>
+            <label for="col-sm-2 control-label" class="col-sm-2 control-label">Optional:</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <input id="startingPointOrdinances" type="checkbox" /><label for="startingPointOrdinances">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Incomplete Ordinances</span></label>&nbsp;&nbsp;
+                    <input id="startingPointNonMormon" type="checkbox" /><label for="startingPointNonMormon">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Non-Mormon</span></label>&nbsp;&nbsp;
+                    <input id="startingPointOrdinances" type="checkbox" /><label for="startingPointOrdinances">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Ordinances</span></label>&nbsp;&nbsp;
                     <input id="startingPointHints" type="checkbox" /><label for="startingPointHints">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Hints</span></label>&nbsp;&nbsp;
                     <input id="startingPointDuplicates" type="checkbox" /><label for="startingPointDuplicates">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Possible Duplicates</span></label>&nbsp;&nbsp;
+                    <input id="startingPointClues" type="checkbox" /><label for="startingPointClues">&nbsp;<span style="font-weight: normal">Clues</span></label>&nbsp;&nbsp;
                 </div>
             </div>
         </div>
