--- a/Web.UI/Content/css/style.css
+++ b/Web.UI/Content/css/style.css
@@ -863,6 +863,7 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
         border-radius: 10px;
         display: none;
         position: absolute;
+        z-index: 1;
 }
 
  .startingPointPersonInfo {
@@ -886,6 +887,10 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
 
 #findPersonForm .selectContainer .form-control-feedback {
      right: 25px;
+}
+
+.input-group .form-control {
+    z-index: 0;
 }
 
 .findClue-table-clues {
