--- a/Web.UI/Views/Research/StartingPoint.cshtml
+++ b/Web.UI/Views/Research/StartingPoint.cshtml
@@ -51,9 +51,9 @@
             </div>
         </div>
         <div class="form-group checkbox-bottom">
-            <label for="col-sm-2 control-label" class="col-sm-2 control-label">Optional:</label>
+            <label for="col-sm-2 control-label" class="col-sm-2 control-label option-label">Optional:</label>
             <div class="col-sm-10">
-                <div class="input-group">
+                <div class="input-group option-checkboxes">
                     <input id="startingPointNonMormon" type="checkbox" /><label for="startingPointNonMormon">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Non-Mormon</span></label>&nbsp;&nbsp;
                     <input id="startingPointOrdinances" type="checkbox" /><label for="startingPointOrdinances">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Ordinances</span></label>&nbsp;&nbsp;
                     <input id="startingPointHints" type="checkbox" /><label for="startingPointHints">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Hints</span></label>&nbsp;&nbsp;
