Working on reworking the options dialog.

--- a/Web.UI/Views/Research/FindPersonOptions.cshtml
+++ b/Web.UI/Views/Research/FindPersonOptions.cshtml
@@ -1,70 +1,40 @@
 ﻿<div class="panel-body">
     <form class="form-horizontal dialog-options" role="form">
-        <div class="form-group">
-            <div class="col-sm-12">
-                <div class="input-group">
-                    <select class="form-control" id="findPersonOptions1">
-                        <option value="0">Select</option>
-                    </select>
-                </div>
+        <div class="panel panel-primary" style="float: left; width: 49%">
+            <div class="panel-heading">All Options</div>
+            <div class="panel-body">
+                <ul id="list2" class="list-group" >
+                    <li class="list-group-item" id="option0"><span class="fa fmf-family16"></span> Family Research Urls</li>
+                    <li class="list-group-item" id="option1"><span class="fa fmf-compass16"></span> Starting Point</li>
+                    <li class="list-group-item" id="option2"><span class="fa fmf-hint16"></span> Hints</li>
+                    <li class="list-group-item" id="option3"><span class="fa fmf-clue16"></span> Find Clues</li>
+                    <li class="list-group-item" id="option4"><span class="fa fmf-temple16"></span> Ordinances</li>
+                    <li class="list-group-item" id="option5"><span class="fa fmf-retrieve16"></span> Retrieve</li>
+                    <li class="list-group-item" id="option6"><span class="fa fmf-google16"></span> Google</li>
+                    <li class="list-group-item" id="option7"><span class="fa fmf-findmypast16"></span> Find My Past</li>
+                    <li class="list-group-item" id="option8"><span class="fa fmf-myheritage16"></span> My Heritage</li>
+                    <li class="list-group-item" id="option9"><span class="fa fmf-ancestry16"></span> Ancestry</li>
+                    <li class="list-group-item" id="option10"><span class="fa fmf-findagrave16"></span> Find-A-Grave</li>
+                    <li class="list-group-item" id="option11"><span class="fa fmf-american16"></span> American Ancestors</li>
+                    <li class="list-group-item" id="option12"><span class="fa fmf-puzilla16"></span> Puzilla - Descendants</li>
+                    <li class="list-group-item" id="option13"><span class="fa fmf-puzilla16"></span> Puzilla - Ancestors</li>
+                    <li class="list-group-item" id="option14"><span class="fa fmf-familysearch16"></span> Family Search - Tree</li>
+                    <li class="list-group-item" id="option15"><span class="fa fmf-familysearch16"></span> Family Search - Descendancy</li>
+                    <li class="list-group-item" id="option16"><span class="fa fmf-familysearch16"></span> Family Search - Fan</li>
+                    <li class="list-group-item" id="option17"><span class="fa fmf-familysearch16"></span> Family Search - Person</li>
+                    <li class="list-group-item" id="option18"><span class="fa fmf-familysearch16"></span> Family Search - Search</li>
+                </ul>
             </div>
         </div>
-        <div class="form-group">
-            <div class="col-sm-12">
-                <div class="input-group">
-                    <select class="form-control" id="findPersonOptions2">
-                        <option value="0">Select</option>
-                    </select>
-                </div>
+        <div class="panel panel-primary" style="float: right; width: 49%">
+            <div class="panel-heading">Your Options</div>
+            <div class="panel-body">
+                <ul id="list1" class="list-group">
+                </ul>
             </div>
         </div>
-        <div class="form-group">
-            <div class="col-sm-12">
-                <div class="input-group">
-                    <select class="form-control" id="findPersonOptions3">
-                        <option value="0">Select</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-12">
-                <div class="input-group">
-                    <select class="form-control" id="findPersonOptions4">
-                        <option value="0">Select</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-12">
-                <div class="input-group">
-                    <select class="form-control" id="findPersonOptions5">
-                        <option value="0">Select</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-12">
-                <div class="input-group">
-                    <select class="form-control" id="findPersonOptions6">
-                        <option value="0">Select</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-12">
-                <div class="input-group">
-                    <select class="form-control" id="findPersonOptions7">
-                        <option value="0">Select</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <hr/>
-        <div class="row" >
+        <div class="col-lg-12">
+            <hr />
             <div class="text-center">
                 <button id="findPersonOptionSaveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left" type="button"><i class="fa fmf-save24 dialog-buttons"></i> Save</button>
                 <button id="findPersonOptionCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left" type="button"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
