--- a/Web.UI/Content/css/style.css
+++ b/Web.UI/Content/css/style.css
@@ -926,3 +926,20 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
 .option-checkboxes {
     margin-top: 1px !important;
 }
+
+#list1, #list2 {
+    list-style-type: none; 
+    margin: 0; 
+    float: left; 
+    margin-right: 10px; 
+    background: #eee; 
+    padding: 5px;
+    width: 100%; 
+    min-height: 40px;
+}
+#list1 li, #list2 li {
+    margin: 3px; 
+    padding: 5px; 
+    width: 97%;
+    border-radius: 4px;
+}
