Fixed the issue with when there is no selected on the right so you can still drop on the right.

--- a/Web.UI/Content/css/style.css
+++ b/Web.UI/Content/css/style.css
@@ -927,7 +927,7 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
     margin-top: 1px !important;
 }
 
-#list1, #list2 {
+#selected, #available {
     list-style-type: none; 
     margin: 0; 
     float: left; 
@@ -937,7 +937,7 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
     width: 100%; 
     min-height: 40px;
 }
-#list1 li, #list2 li {
+#selected li, #available li {
     margin: 3px; 
     padding: 5px; 
     width: 97%;
