Added the ability to scroll if the list got bigger

--- a/Web.UI/Views/Research/FindPersonOptions.cshtml
+++ b/Web.UI/Views/Research/FindPersonOptions.cshtml
@@ -1,17 +1,17 @@
-﻿<div class="panel-body">
+﻿<div class="panel-body" >
     <form class="form-horizontal dialog-options" role="form">
-        <div class="panel panel-primary" style="float: left; width: 49%">
-            <div class="panel-heading">Available</div>
-            <div class="panel-body">
-                <ul id="available" class="list-group" >
-                </ul>
+        <div style="height: 545px; overflow-y: auto">
+            <div class="panel panel-primary" style="float: left; width: 49%">
+                <div class="panel-heading">Available</div>
+                <div class="panel-body">
+                    <ul id="available" class="list-group"></ul>
+                </div>
             </div>
-        </div>
-        <div class="panel panel-primary" style="float: right; width: 49%">
-            <div class="panel-heading">Selected</div>
-            <div class="panel-body">
-                <ul id="selected" class="list-group">
-                </ul>
+            <div class="panel panel-primary" style="float: right; width: 49%">
+                <div class="panel-heading">Selected</div>
+                <div class="panel-body">
+                    <ul id="selected" class="list-group"></ul>
+                </div>
             </div>
         </div>
         <div class="col-lg-12">
