--- a/Web.UI/Views/Home/Index.cshtml
+++ b/Web.UI/Views/Home/Index.cshtml
@@ -131,7 +131,7 @@
                 <i class="fa fa-database service-icon"></i>
                 <div class="desc">
                     <h4>FamilySearch Database</h4>
-                    <p>First, the search engine gathers data from your family tree in FamilySearch.org. Select the number of generations to gather, and whether to search ancestors, descendants or both.  Next, you can choose from several options to analyze your family data -- to receive clues that might help you find missing family names.</p>
+                    <p>First, the search engine gathers data from your family tree in FamilySearch.org. Select the number of Generation to gather, and whether to search ancestors, descendants or both.  Next, you can choose from several options to analyze your family data -- to receive clues that might help you find missing family names.</p>
                 </div>
             </div>
         </div>
