--- a/Web.UI/Views/Research/DateProblemsReport.cshtml
+++ b/Web.UI/Views/Research/DateProblemsReport.cshtml
@@ -43,8 +43,8 @@
 </div>
 <div id="dateProblemsReportSpinner" />
 
-<div id="dateProblemsPersonInfoDiv" class="personInfo">
-    <div id="content"></div>
+<div id="dateProblemsReportPersonInfoDiv" class="personInfo">
+    <div id="dateProblemsReportPersonInfoContent"></div>
 </div>
 
 <script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
