--- a/Web.UI/Views/Research/FindCluesReport.cshtml
+++ b/Web.UI/Views/Research/FindCluesReport.cshtml
@@ -42,8 +42,8 @@
 </div>
 <div id="findCluesReportSpinner" />
 
-<div id="findCluesPersonInfoDiv" class="personInfo">
-    <div id="content"></div>
+<div id="findCluesReportPersonInfoDiv" class="personInfo">
+    <div id="findCluesReportPersonInfoContent"></div>
 </div>
 
 <script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
