--- a/Web.UI/Views/Research/PossibleDuplicatesReport.cshtml
+++ b/Web.UI/Views/Research/PossibleDuplicatesReport.cshtml
@@ -44,8 +44,8 @@
 </div>
 <div id="possibleDuplicatesReportSpinner" />
 
-<div id="possibleDuplicatesPersonInfoDiv" class="personInfo">
-    <div id="content"></div>
+<div id="possibleDuplicatesReportPersonInfoDiv" class="personInfo">
+    <div id="possibleDuplicatesReportPersonInfoContent"></div>
 </div>
 
 <script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
