--- a/Web.UI/Views/Research/FindClues.cshtml
+++ b/Web.UI/Views/Research/FindClues.cshtml
@@ -1,10 +1,10 @@
 <div class="panel-body">
     <form class="form-horizontal" role="form">
-        <div class="form-group">
+        <div class="form-group" id="findCluesReportIdGroup" style="display: none;">
             <label for="findCluesReportId" class="col-sm-2 control-label">Retrieved:</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <select class="form-control" id="findCluesReportId">
+                    <select class="form-control findCluesAction" id="findCluesReportId">
                         <option value="0">Select</option>
                     </select>
                     <span class="input-group-btn">
@@ -26,7 +26,7 @@
             <label for="findCluesPersonId" class="col-sm-2 control-label">Name:</label>
             <div class="col-sm-7">
                 <div class="input-group">
-                    <select class="form-control" id="findCluesPersonId"></select>
+                    <select class="form-control findCluesAction" id="findCluesPersonId"></select>
                     <span class="input-group-btn">
                         <button id="findCluesFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
                     </span>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="findCluesGenerationDiv" class="col-sm-2 control-label">Generations:</label>
+            <label for="findCluesGenerationDiv" class="col-sm-2 control-label">Generation:</label>
             <div class="col-sm-4">
                 <div class="input-group">
                     <div id="findCluesGenerationDiv"></div>
@@ -105,6 +105,9 @@
         </div>
 
     </form>
+</div>
+<div id="findCluesPersonInfoDiv" class="personInfoDialog">
+    <div id="findCluesContent"></div>
 </div>
 <div id="findCluesSpinner"/>
 
