--- a/Web.UI/Views/Research/Hints.cshtml
+++ b/Web.UI/Views/Research/Hints.cshtml
@@ -1,10 +1,10 @@
 <div class="panel-body">
     <form class="form-horizontal" role="form">
-        <div class="form-group">
+        <div class="form-group" id="hintsReportIdGroup" style="display: none;">
             <label for="hintsReportId" class="col-sm-2 control-label">Retrieved:</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <select class="form-control" id="hintsReportId">
+                    <select class="form-control hintsAction" id="hintsReportId">
                         <option value="0">Select</option>
                     </select>
                     <span class="input-group-btn">
@@ -26,7 +26,7 @@
             <label for="hintsPersonId" class="col-sm-2 control-label">Name:</label>
             <div class="col-sm-7">
                 <div class="input-group">
-                    <select class="form-control" id="hintsPersonId"></select>
+                    <select class="form-control hintsAction" id="hintsPersonId"></select>
                     <span class="input-group-btn">
                         <button id="hintsFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
                     </span>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="hintsGenerationDiv" class="col-sm-2 control-label">Generations:</label>
+            <label for="hintsGenerationDiv" class="col-sm-2 control-label">Generation:</label>
             <div class="col-sm-4">
                 <div class="input-group addChildren-box">
                     <div id="hintsGenerationDiv"></div>
@@ -72,6 +72,9 @@
             </div>
         </div>
     </form>
+</div>
+<div id="hintsPersonInfoDiv" class="personInfoDialog">
+    <div id="hintsContent"></div>
 </div>
 <div id="hintsSpinner"/>
 
