--- a/Web.UI/Views/Research/HintsReport.cshtml
+++ b/Web.UI/Views/Research/HintsReport.cshtml
@@ -41,8 +41,8 @@
 </div>
 <div id="hintsReportSpinner" />
 
-<div id="hintsPersonInfoDiv" class="personInfo">
-    <div id="content"></div>
+<div id="hintsReportPersonInfoDiv" class="personInfo">
+    <div id="hintsReportPersonInfoContent"></div>
 </div>
 
 <script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
