--- a/Web.UI/Views/Research/PlaceProblems.cshtml
+++ b/Web.UI/Views/Research/PlaceProblems.cshtml
@@ -1,10 +1,10 @@
 <div class="panel-body">                                                      
     <form class="form-horizontal" role="form">
-        <div class="form-group">
+        <div class="form-group" id="placeProblemsReportIdGroup" style="display: none;">
             <label for="placeProblemsReportId" class="col-sm-2 control-label">Retrieved:</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <select class="form-control" id="placeProblemsReportId">
+                    <select class="form-control placeProblemsAction" id="placeProblemsReportId">
                         <option value="0">Select</option>
                     </select>
                     <span class="input-group-btn">
@@ -26,18 +26,17 @@
             <label for="placeProblemsPersonId" class="col-sm-2 control-label">Name:</label>
             <div class="col-sm-7">
                 <div class="input-group">
-                    <select class="form-control" id="placeProblemsPersonId"></select>
+                    <select class="form-control placeProblemsAction" id="placeProblemsPersonId"></select>
                     <span class="input-group-btn">
                         <button id="placeProblemsFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
                     </span>
                 </div>
             </div>
         </div>
-
         <div class="form-group">
-            <label for="placeProblemsGenerationDiv" class="col-sm-2 control-label">Generations:</label>
+            <label for="placeProblemsGenerationDiv" class="col-sm-2 control-label">Generation:</label>
             <div class="col-sm-4">
-                <div class="input-group">
+                <div class="input-group addChildren-box">
                     <div id="placeProblemsGenerationDiv"></div>
                 </div>
             </div>
@@ -64,7 +63,10 @@
         </div>
     </form>
 </div>
-<div id="placeProblemsSpinner"/>
+<div id="placeProblemsPersonInfoDiv" class="personInfoDialog">
+    <div id="placeProblemsContent"></div>
+</div>
+<div id="startingPointSpinner"/>
 
 <script type="text/javascript">require(['main'], function (main) { require(['placeProblemsController']); });</script>
 
