--- a/Web.UI/Views/Research/PlaceProblemsReport.cshtml
+++ b/Web.UI/Views/Research/PlaceProblemsReport.cshtml
@@ -43,8 +43,8 @@
 </div>
 <div id="placeProblemsReportSpinner" />
 
-<div id="placeProblemsPersonInfoDiv" class="personInfo">
-    <div id="content"></div>
+<div id="placeProblemsReportPersonInfoDiv" class="personInfo">
+    <div id="placeProblemsReportPersonInfoContent"></div>
 </div>
 
 <script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
