--- a/Web.UI/Views/Research/PossibleDuplicates.cshtml
+++ b/Web.UI/Views/Research/PossibleDuplicates.cshtml
@@ -1,10 +1,10 @@
 ﻿<div class="panel-body">                                                      
     <form class="form-horizontal" role="form">
-        <div class="form-group">
+        <div class="form-group"  id="possibleDuplicatesReportIdGroup" style="display: none;">
             <label for="possibleDuplicatesReportId" class="col-sm-2 control-label">Retrieved:</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <select class="form-control" id="possibleDuplicatesReportId">
+                    <select class="form-control possibleDuplicatesAction" id="possibleDuplicatesReportId">
                         <option value="0">Select</option>
                     </select>
                     <span class="input-group-btn">
@@ -26,7 +26,7 @@
             <label for="possibleDuplicatesPersonId" class="col-sm-2 control-label">Name:</label>
             <div class="col-sm-7">
                 <div class="input-group">
-                    <select class="form-control" id="possibleDuplicatesPersonId"></select>
+                    <select class="form-control possibleDuplicatesAction" id="possibleDuplicatesPersonId"></select>
                     <span class="input-group-btn">
                         <button id="possibleDuplicatesFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
                     </span>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="form-group">
-            <label for="possibleDuplicatesGenerationDiv" class="col-sm-2 control-label">Generations:</label>
+            <label for="possibleDuplicatesGenerationDiv" class="col-sm-2 control-label">Generation:</label>
             <div class="col-sm-4">
                 <div class="input-group">
                     <div id="possibleDuplicatesGenerationDiv"></div>
@@ -71,6 +71,9 @@
             </div>
         </div>
     </form>
+</div>
+<div id="possibleDuplicatesPersonInfoDiv" class="personInfoDialog">
+    <div id="possibleDuplicatesContent"></div>
 </div>
 <div id="possibleDuplicatesSpinner"/>
 
