--- a/Web.UI/Views/Research/Retrieve.cshtml
+++ b/Web.UI/Views/Research/Retrieve.cshtml
@@ -22,7 +22,7 @@
         </div>
 
         <div class="form-group">
-            <label for="retrieveGenerationDiv" class="col-sm-2 control-label">Generations:</label>
+            <label for="retrieveGenerationDiv" class="col-sm-2 control-label">Generation:</label>
             <div class="col-sm-4">
                 <div class="input-group">
                     <div id="retrieveGenerationDiv"></div>
