--- a/Web.UI/Views/Help/Help.cshtml
+++ b/Web.UI/Views/Help/Help.cshtml
@@ -21,12 +21,12 @@
         <div class="container content">
             <div class="row">
                 <div class="col-md-9">
-                    <div class="headline"><h2>Our Clinets</h2></div>
+                    <div class="headline"><h2>Help Topics</h2></div>
 
-                    <!-- Clients Block-->
-                    <div class="row clients-page">
+                    <!-- Help Block-->
+                    <div class="row help-page">
                         <div class="col-md-2">
-                            <img src="assets/img/clients/cisco.png" class="img-responsive hover-effect" alt="" />
+                            <img src="assets/img/Help/cisco.png" class="img-responsive hover-effect" alt="" />
                         </div>
                         <div class="col-md-10">
                             <h3>Cisco Systems, Inc</h3>
@@ -39,11 +39,11 @@
                             <p>Olerano ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna edetquam lacus. Fusce condimentum eleifend enim a sint occaecati feugiat..</p>
                         </div>
                     </div>
-                    <!-- End Clients Block-->
-                    <!-- Clients Block-->
-                    <div class="row clients-page">
+                    <!-- End Help Block-->
+                    <!-- Help Block-->
+                    <div class="row help-page">
                         <div class="col-md-2">
-                            <img src="assets/img/clients/natural.png" class="img-responsive hover-effect" alt="" />
+                            <img src="assets/img/Help/natural.png" class="img-responsive hover-effect" alt="" />
                         </div>
                         <div class="col-md-10">
                             <h3>Natural Green</h3>
@@ -55,11 +55,11 @@
                             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati. Olerano ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna edetquam lacus. Fusce condimentum eleifend enim a sint occaecati feugiat..</p>
                         </div>
                     </div>
-                    <!-- End Clients Block-->
-                    <!-- Clients Block-->
-                    <div class="row clients-page">
+                    <!-- End Help Block-->
+                    <!-- Help Block-->
+                    <div class="row help-page">
                         <div class="col-md-2">
-                            <img src="assets/img/clients/cocacola.png" class="img-responsive hover-effect" alt="" />
+                            <img src="assets/img/Help/cocacola.png" class="img-responsive hover-effect" alt="" />
                         </div>
                         <div class="col-md-10">
                             <h3>The Coca-Cola Company</h3>
@@ -72,11 +72,11 @@
                             <p>Olerano ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna edetquam lacus. Fusce condimentum eleifend enim a sint occaecati feugiat..</p>
                         </div>
                     </div>
-                    <!-- End Clients Block-->
-                    <!-- Clients Block-->
-                    <div class="row clients-page">
+                    <!-- End Help Block-->
+                    <!-- Help Block-->
+                    <div class="row help-page">
                         <div class="col-md-2">
-                            <img src="assets/img/clients/gamescast.png" class="img-responsive hover-effect" alt="" />
+                            <img src="assets/img/Help/gamescast.png" class="img-responsive hover-effect" alt="" />
                         </div>
                         <div class="col-md-10">
                             <h3>Game Cast TV</h3>
@@ -88,7 +88,7 @@
                             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati. Olerano ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna edetquam lacus. Fusce condimentum eleifend enim a sint occaecati feugiat..</p>
                         </div>
                     </div>
-                    <!-- End Clients Block-->
+                    <!-- End Help Block-->
                     <!-- Pagination -->
                     <div class="text-center md-margin-bottom-30">
                         <ul class="pagination">
