More updates to help web page

--- a/Web.UI/Views/Help/Help.cshtml
+++ b/Web.UI/Views/Help/Help.cshtml
@@ -22,14 +22,31 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="headline"><h2>Help Topics</h2></div>
-
-                    <!-- Help Block-->
                     <div class="row help-page">
                         <div class="col-md-2">
-                            <img src="assets/img/Help/cisco.png" class="img-responsive hover-effect" alt="" />
+                            <a class="fancyboxvideo fitVideo" data-width="800" data-height="450" caption="" href="http://player.vimeo.com/video/136152023?title=0&amp;byline=0&amp;portrait=0"><img src="../../Images/FamilyHistoryCourse1.8.png" class="img-responsive hover-effect" alt="" /></a>
                         </div>
                         <div class="col-md-10">
-                            <h3>Cisco Systems, Inc</h3>
+                            <h3>
+                                <a class="fancyboxvideo fitVideo" data-width="800" data-height="450" caption="" href="http://player.vimeo.com/video/136152023?title=0&amp;byline=0&amp;portrait=0">Family History Course 1</a>
+                            </h3>
+                            <ul class="list-inline">
+                                <li><i class="fa fa-film color-green"></i> Video</li>
+                                <li><i class="fa fa-file-pdf-o color-green"></i> Presentation</li>
+                            </ul>
+                            <p>This is the first of eight courses that have been recorded in a Sunday School class for anyone that was unable to take the class because other conflicts, or for those that have already taken the class and would like to go back and review this video to help them with their own family history work.</p>
+                            <p>This video primarily introduces the concept of Family History work, where Family History work is really all about families, and that it is a very important work that is strongly encouraged by our church leaders.</p>
+                            <p><a class="helpDialog" data-fancybox-type="iframe" href="~/Content/person.pdf">PDF version of Presentation</a></p>
+                        </div>
+                    </div>
+                    <div class="row help-page">
+                        <div class="col-md-2">
+                            <a class="fancyboxvideo fitVideo" data-width="800" data-height="450" caption="" href="http://player.vimeo.com/video/136152023?title=0&amp;byline=0&amp;portrait=0"><img src="../../Images/FamilyHistory1stConvert8.png" class="img-responsive hover-effect" alt="" /></a>
+                        </div>
+                        <div class="col-md-10">
+                            <h3>
+                                <a class="fancyboxvideo fitVideo" data-width="800" data-height="450" caption="" href="http://player.vimeo.com/video/136152023?title=0&amp;byline=0&amp;portrait=0">Find 1st Convert</a>
+                            </h3>
                             <ul class="list-inline">
                                 <li><i class="fa fa-map-marker color-green"></i> USA</li>
                                 <li><i class="fa fa-globe color-green"></i> <a class="linked" href="#">http://www.example.com</a></li>
@@ -39,66 +56,15 @@
                             <p>Olerano ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna edetquam lacus. Fusce condimentum eleifend enim a sint occaecati feugiat..</p>
                         </div>
                     </div>
-                    <!-- End Help Block-->
-                    <!-- Help Block-->
-                    <div class="row help-page">
-                        <div class="col-md-2">
-                            <img src="assets/img/Help/natural.png" class="img-responsive hover-effect" alt="" />
-                        </div>
-                        <div class="col-md-10">
-                            <h3>Natural Green</h3>
-                            <ul class="list-inline">
-                                <li><i class="fa fa-map-marker color-green"></i> Canada</li>
-                                <li><i class="fa fa-globe color-green"></i> <a class="linked" href="#">http://www.example.com</a></li>
-                                <li><i class="fa fa-briefcase color-green"></i> Logo Design &amp; Wordpress</li>
-                            </ul>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati. Olerano ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna edetquam lacus. Fusce condimentum eleifend enim a sint occaecati feugiat..</p>
-                        </div>
-                    </div>
-                    <!-- End Help Block-->
-                    <!-- Help Block-->
-                    <div class="row help-page">
-                        <div class="col-md-2">
-                            <img src="assets/img/Help/cocacola.png" class="img-responsive hover-effect" alt="" />
-                        </div>
-                        <div class="col-md-10">
-                            <h3>The Coca-Cola Company</h3>
-                            <ul class="list-inline">
-                                <li><i class="fa fa-map-marker color-green"></i> USA</li>
-                                <li><i class="fa fa-globe color-green"></i> <a class="linked" href="#">http://www.example.com</a></li>
-                                <li><i class="fa fa-briefcase color-green"></i> Web Design &amp; Development</li>
-                            </ul>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati</p>
-                            <p>Olerano ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna edetquam lacus. Fusce condimentum eleifend enim a sint occaecati feugiat..</p>
-                        </div>
-                    </div>
-                    <!-- End Help Block-->
-                    <!-- Help Block-->
-                    <div class="row help-page">
-                        <div class="col-md-2">
-                            <img src="assets/img/Help/gamescast.png" class="img-responsive hover-effect" alt="" />
-                        </div>
-                        <div class="col-md-10">
-                            <h3>Game Cast TV</h3>
-                            <ul class="list-inline">
-                                <li><i class="fa fa-map-marker color-green"></i> Europe</li>
-                                <li><i class="fa fa-globe color-green"></i> <a class="linked" href="#">http://www.example.com</a></li>
-                                <li><i class="fa fa-briefcase color-green"></i> Web Design &amp; HTML/CSS</li>
-                            </ul>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati. Olerano ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna edetquam lacus. Fusce condimentum eleifend enim a sint occaecati feugiat..</p>
-                        </div>
-                    </div>
-                    <!-- End Help Block-->
-                    <!-- Pagination -->
                     <div class="text-center md-margin-bottom-30">
                         <ul class="pagination">
-                            <li><a href="#">«</a></li>
+                            <li><a href="#"><<</a></li>
                             <li><a href="#">1</a></li>
                             <li><a href="#">2</a></li>
                             <li class="active"><a href="#">3</a></li>
                             <li><a href="#">4</a></li>
                             <li><a href="#">5</a></li>
-                            <li><a href="#">»</a></li>
+                            <li><a href="#">>></a></li>
                         </ul>
                     </div>
                     <!-- End Pagination -->
@@ -111,13 +77,8 @@
                         <div class="row main-check margin-bottom-30">
                             <div class="col-xs-12 md-margin-bottom-20">
                                 <ul class="list-unstyled check-style">
-                                    <li><i class="fa fa-angle-right service-icon"></i> <a href="#">How does encryption work?</a></li>
-                                    <li><i class="fa fa-angle-right color-green"></i> <a href="#">Is Unify Template legal?</a></li>
-                                    <li><i class="fa fa-angle-right color-green"></i> <a href="#">Can I download Unify multiple times?</a></li>
-                                    <li><i class="fa fa-angle-right color-green"></i> <a href="#">How to Update Unify Template?</a></li>
-                                    <li><i class="fa fa-angle-right color-green"></i> <a href="#">How does encryption work?</a></li>
-                                    <li><i class="fa fa-angle-right color-green"></i> <a href="#">Is Unify Template legal?</a></li>
-                                    <li><i class="fa fa-angle-right color-green"></i> <a href="#">Can I download Unify multiple times?</a></li>
+                                    <li><i class="fa fa-angle-right color-green"></i> <a href="#">Family History Course 1</a></li>
+                                    <li><i class="fa fa-angle-right color-green"></i> <a href="#">Finding 1st Convert</a></li>
                                 </ul>
                             </div>
                         </div>
